# mms

./: .env.example  .gitignore  README.md  __init__.py  _paths.py  aiu_cost_estimator.py  aiu_feedback.py  arch_check.py  arch_resolver.py  ast_diff.py  ast_skeleton.py  atomicity_check.py  cli.py  codemap.py  conftest.py  dag_model.py  dag_suggestions.md  dep_sniffer.py  doc_drift.py  dream.py  entropy_scan.py  ep_runner.py  ep_wizard.py  execution_suggestion.md  fix_gen.py  funcmap.py  graph_resolver.py  injector.py  intent_classifier.py  layer1_suggestion.md  layer2_readme.md  memory_viz.html  mms_config.py  model_tracker.py  ontology_syncer.py  postcheck.py  precheck.py  private.py  pyproject.toml  repo_map.py  (+12 more)
.github/workflows/: ci.yml
assets/bootstrap_profiles/: bootstrap_config_template.yaml  signal_weights.yaml
assets/ontology_schema/: memory_schema.yaml  ontology_schema_readme.md
assets/ontology_schema/_config/: inference_rules.yaml  ontology_design_principles.yaml  universal_layers.yaml
assets/ontology_schema/actions/: bootstrap.yaml  distill.yaml  promote_draft.yaml  retire_memory.yaml
assets/ontology_schema/functions/: fn_build_code_graph.yaml  fn_detect_code_object_type.yaml  fn_detect_drift.yaml  fn_find_contradictions.yaml  fn_infer_layer.yaml
assets/ontology_schema/links/: about.yaml  contains.yaml  depends_on.yaml  implements.yaml  related_to.yaml
assets/ontology_schema/objects/: _memory_base.yaml  anti_pattern.yaml  business_flow.yaml  code_class.yaml  decision.yaml  memory_node.yaml  pattern.yaml
assets/ontology_schema/rules/: rule_bootstrap_pipeline.yaml  rule_memory_quality.yaml  rule_post_apply_incremental.yaml
backend/app/: test.py
benchmark/: README.md  run_benchmark.py  run_codegen.py  run_indexer.py
benchmark/config/: systems.yaml
benchmark/data/: queries_codegen.yaml  queries_v2.yaml
benchmark/results/.embed_index/: memory_meta.json  memory_vectors.npy
benchmark/results/v1/: index_stats_20260420_230835.json  raw_20260420_225436.jsonl  raw_20260420_225709.jsonl  raw_20260420_230843.jsonl  raw_20260420_230959.jsonl  raw_20260421_231341_v1_improved.jsonl  raw_20260421_231405_v2.jsonl  raw_20260421_231415_v2_full.jsonl  raw_20260422_170502_v2_improved.jsonl  raw_20260422_173816_v2_final.jsonl  raw_20260422_173834_v1_final.jsonl  raw_20260422_173852_v2_final.jsonl  raw_20260422_180553_v2_fixed_F.jsonl  raw_20260422_180613_v1_fixed_F.jsonl  raw_v3_post_refactor.jsonl  report_20260420_225436.md  report_20260420_225709.md  report_20260420_230843.md  report_20260420_230959.md  report_20260421_231341_v1_improved.md  report_20260421_231405_v2.md  report_20260421_231415_v2_full.md  report_20260422_170502_v2_improved.md  report_20260422_173816_v2_final.md  report_20260422_173834_v1_final.md  report_20260422_173852_v2_final.md  report_20260422_180553_v2_fixed_F.md  report_20260422_180613_v1_fixed_F.md  report_20260422_final_comprehensive.md  (+15 more)
benchmark/src/: embed_index.py  evaluator.py  indexer.py
benchmark/v1_legacy/: README.md  run_codegen.py
benchmark/v2/: README.md  __init__.py  config.yaml  runner.py  schema.py
core/: indexer.py  reader.py  writer.py
docs/: benchmark_report_latest.md
observability/: __init__.py  audit.py  tracer.py
providers/: __init__.py  bailian.py  base.py  claude.py  factory.py  gemini.py  ollama.py
resilience/: __init__.py  checkpoint.py  circuit_breaker.py  retry.py
scripts/: benchmark_generator.py  migrate_layer_v4_to_v5.py  migrate_memory_node_to_4_types.py  probe_ast_accuracy.py  visualize_memory.py
seed_packs/: __init__.py
seed_packs/base/: match_conditions.yaml
seed_packs/fastapi_sqlmodel/: match_conditions.yaml
seed_packs/react_zustand/: match_conditions.yaml
seed_packs/spring_boot/: match_conditions.yaml
src/mms/: layer1_readme.md
tests/: conftest.py  test_aiu_expansion.py  test_aiu_registry.py  test_aiu_registry_v2.py  test_alert_logger.py  test_arch_check.py  test_ast_diff.py  test_ast_parsers.py  test_ast_skeleton.py  test_atomicity_check.py  test_auto_link.py  test_autonomous_runner_control.py  test_bailian_provider.py  test_bootstrap_e2e.py  test_bootstrap_incremental_e2e.py  test_bootstrap_on_nestjs.py  test_bootstrap_on_python_fastapi.py  test_bootstrap_on_spring_boot.py  test_bootstrap_populator.py  test_code_graph_builder.py  test_codegen_evaluator.py  test_codemap_unit.py  test_contradiction_detection.py  test_dag_model.py  test_dep_sniffer.py  test_diagnostics.py  test_dream.py  test_edge_decay.py  test_ep_parser.py  test_ep_runner.py  test_eviction_score.py  test_file_applier.py  test_freshness_checker.py  test_graph_typed_traversal.py  test_harness_hardening.py  test_incident.py  test_intent_plan_summary.py  test_layer2_e2e.py  test_layer2_e2e_extended.py  test_link_registry.py  (+21 more)
tests/benchmark/: test_layer1_cost_efficiency.py  test_layer1_swebench.py  test_layer2_memory.py  test_layer3_safety.py  test_phase4_pass_at_1.py  test_schema.py
tests/cassettes/: test_synthesize_go_gin[isolated_go_project].yaml  test_synthesize_java_spring_boot[isolated_spring_boot].yaml  test_synthesize_python_fastapi[isolated_python_project].yaml
tests/dag/: test_aiu_cost_estimator.py  test_aiu_registry_ocp_extended.py  test_aiu_registry_v2.py  test_atomicity_check_full.py  test_cost_and_atomicity.py  test_feedback_store.py  test_feedback_suggest.py  test_task_decomposer.py
tests/eval/: eval_framework.py  test_go_eval.py  test_java_eval.py  test_python_eval.py
tests/execution/: test_autonomous_runner_bug2_regression.py  test_file_applier_scope_guard.py  test_internal_reviewer_flag.py  test_sandbox_bug1_regression.py
tests/integration/: bootstrap_advanced_tests.py  codemap_tests.py  coldstart_tests.py  diag_trace_tests.py  health_check_tests.py  memory_query_tests.py  seed_ingest_tests.py  test_ep_parser_multilang.py  test_ep_runner_multilang.py  test_ep_runner_state_machine.py  test_postcheck_multilang.py  test_precheck_multilang.py  test_synthesizer_multilang.py  test_workflow_e2e_multilang.py
trace/: __init__.py  collector.py  event.py  reporter.py  tracer.py
(+685 files in other folders)
