[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mulan"
version = "0.1.0"
description = "木兰（Mulan）— 端侧 AI 代码工程工具链。以织布为喻：将复杂软件任务分解为原子工序，以动态知识图谱为经、精准代码生成为纬，全程在端侧完成，不上传一行代码。"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Mulan Contributors" }]
keywords = ["ai", "agent", "memory", "ontology", "context-engineering", "local-llm", "code-engineering"]

# 核心运行时依赖（全部可选降级，纯标准库也能运行核心功能）
dependencies = [
    # YAML 解析（配置、Ontology、Benchmark 数据集）
    "pyyaml>=6.0",
    # HTTP 客户端（Bailian / Gemini / Claude API 调用）
    "urllib3>=1.26",
    # 结构化日志
    "structlog>=23.0",
]

[project.optional-dependencies]
# LLM 提供商（按需安装）
bailian = [
    "openai>=1.30",         # Bailian 兼容 OpenAI SDK
    "dashscope>=1.20",      # 阿里云百炼 SDK（嵌入向量）
]
gemini = [
    "google-generativeai>=0.5",
]
claude = [
    "anthropic>=0.25",
]
ollama = []  # Ollama 通过 HTTP 调用，无额外依赖

# Benchmark（ES + Milvus 检索）
benchmark = [
    "pymilvus>=2.4",
    "elasticsearch>=8.0",
    "numpy>=1.24",
]

# 开发和测试
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "pytest-json-report>=1.5",
    "pyyaml>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

# 全量安装
all = [
    "mulan[bailian,gemini,benchmark,dev]",
]

[project.scripts]
mulan = "mms.cli:main"

[project.urls]
Homepage = "https://github.com/allengaoo/mms"
Repository = "https://github.com/allengaoo/mms"

# ── setuptools 包发现 ──────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]
include = ["mms*"]
exclude = ["tests*", "benchmark*"]

# ── pytest 配置 ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = [
    "--tb=short",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: 慢速测试（需要 LLM API）",
    "integration: 集成测试（需要外部服务）",
    "benchmark: Benchmark 评估测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── coverage 配置 ─────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "benchmark/*",
    "seed_packs/*",
    "*/__pycache__/*",
    "*/private.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
# fail_under = 60  # 渐进式引入，初期不阻断 CI

# ── ruff lint 配置 ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# 仅启用错误（E/F/W）和导入排序（I），关闭 UP（Python 3.9 兼容模式）
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # 行长度（不强制）
    "E402",   # 模块级 import 不在顶部（路径注入模式需要）
    "F401",   # 未使用 import（现有代码较多，渐进式清理）
    "W291",   # 尾部空格
    "W293",   # 空白行包含空格
    "I001",   # import 排序（现有代码批量改动风险高）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401", "F811", "N802"]
"benchmark/*" = ["E501", "F401"]

# ── mypy 配置（宽松模式，渐进式引入）────────────────────────────────────────────
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
check_untyped_defs = false
